# Opinfer

./: .gitignore  CONTRIBUTING.md  GITHUB_PAGES_SETUP.md  INSTALL.md  LICENSE  MANIFEST.in  MOTION_GATING_LOGIC.md  QUICK_VLM_EXAMPLE.py  README.md  RELEASE_GUIDE.md  REPOSITORY_READINESS_CHECKLIST.md  VLM_USAGE_GUIDE.md  example_usage.py  pyproject.toml  requirements.txt  setup.py  simple_test.py  test_all_functionality.py  test_opinfer.py  test_techniques.py  test_video_performance.py  test_with_videos.py
.github/workflows/: docs.yml  pypi-release.yml
docs/: .gitignore  DEPLOYMENT.md  README.md  SETUP.md  babel.config.js  docusaurus.config.js  package.json  setup.ps1  sidebars.js
docs/docs/: intro.md
docs/docs/advanced/: benchmarking.md  custom-models.md
docs/docs/api/: core-classes.md  intro.md  optimized-inference.md
docs/docs/concepts/: adaptive-system.md  motion-gating.md  techniques.md
docs/docs/getting-started/: examples.md  installation.md  quickstart.md
docs/docs/guides/: optimization.md  performance-tuning.md  vlm-integration.md
docs/src/css/: custom.css
opinfer/: __init__.py  adaptive.py  api.py  cli.py  core.py  detectors.py  models.py  optimizer.py  queue.py
researchtest/: .gitkeep  QUICK_TEST.md  README.md  requirements.txt  run_benchmark.py  vlm_benchmark.py
vdo/: .gitkeep  README.md
